--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- my CSS-->
     <link rel="stylesheet" href="css/style.css">
 
-    <title>Bangkems</title>
+    <title>Zahra Aulia's Diary</title>
 
     
 
