--- a/index.html
+++ b/index.html
@@ -20,8 +20,36 @@
 
 </head>
 <body>
-    <h1>ini website ara,</h1>
-    <h2>hayo nnti gmna jadinya</h2>
+    <!-- Navbar Menu -->
+    <div class="navbar-fixed">
+        <nav class="cyan darken-3">
+          <div class="container">
+            <div class="nav-wrapper">
+              <!-- Headbar -->
+              <a href="#">
+              <img src="img/head.png" width="120">
+              </a>
+
+              <!-- Menu -->
+              <a href="#" data-target="mobile-nav" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+              <ul class="right hide-on-med-and-down">
+                <li><a href="#about">About Me</a></li>
+                <li><a href="#services">Skill</a></li>
+                <li><a href="#blog">myBlog</a></li>
+                <li><a href="#contact">Contact Me</a></li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+      </div>
+
+      <!-- Sidenav -->
+      <ul class="sidenav" id="mobile-nav">
+        <li><a href="#about">About Me</a></li>
+        <li><a href="#services">Skill</a></li>
+        <li><a href="#blog">myBlog</a></li>
+        <li><a href="#contact">Contact Me</a></li>
+      </ul>
 
 </body>
 </html>
