--- a/index.html
+++ b/index.html
@@ -128,9 +128,10 @@
         </div>
       </section>
 
+      <!-- myBlog -->
       <section id="blog" class="blog parallax-container">
         <div class="parallax s12">
-          <img src="img/slider/2.png" class="responsive-img">
+          <img src="img/slider/3.png" class="responsive-img">
         </div>
 
 
@@ -241,6 +242,12 @@
           transition: 600,
           interval: 3000
         });
+
+        const parallax = document.querySelectorAll('.parallax');
+        M.Parallax.init(parallax);
+
+        const materialbox = document.querySelectorAll('.materialboxed');
+        M.Materialbox.init(materialbox);
       
         const scroll = document.querySelectorAll('.scrollspy');
         M.ScrollSpy.init(scroll, {
